bus_dow 칼럼 명 변경

--- a/Luffy/app/views/bus_dows/_form.html.erb
+++ b/Luffy/app/views/bus_dows/_form.html.erb
@@ -17,8 +17,8 @@
   </div>
 
   <div class="field">
-    <%= f.label :dow_id %>
-    <%= f.number_field :dow_id %>
+    <%= f.label :dow_cd_id %>
+    <%= f.number_field :dow_cd_id %>
   </div>
 
   <div class="actions">
